--- a/.github/workflows/android-dev.yaml
+++ b/.github/workflows/android-dev.yaml
@@ -31,4 +31,4 @@ jobs:
         run: flutter pub get
 
       - name: Build APK
-        run: flutter build apk --release --build-name=1.0.0 --build-number=1
+        run: flutter build apk --debug --build-name=1.0.0 --build-number=1
