--- a/.github/workflows/ios-dev.yaml
+++ b/.github/workflows/ios-dev.yaml
@@ -3,10 +3,10 @@ name: FLUTTER _ iOS Build Dev
 on:
   push:
     branches:
-      - main
+      - nhat_dev
   pull_request:
     branches:
-      - main
+      - nhat_dev
 
 jobs:
   build:
