--- a/.github/workflows/android-dev.yaml
+++ b/.github/workflows/android-dev.yaml
@@ -3,10 +3,10 @@ name: FLUTTER _ Android Build Dev
 on:
   push:
     branches:
-      - main
+      - nhat_dev
   pull_request:
     branches:
-      - main
+      - nhat_dev
 
 jobs:
   build:
